Fix alignment

--- a/app/assets/css/pages/_home.styl
+++ b/app/assets/css/pages/_home.styl
@@ -57,10 +57,11 @@
             text: title bold
             font-size: 1.2em
 
-#actions
+#actions    
     text-align: center
     &>div
         display: inline-block
+        vertical-align: top
         width: 260px
         margin: 20px 10px
     h2
